@@ -1,12 +1,31 @@
-/**************************************************************************************************/
+/*******************************************************************************
+ *
+ * Copyright (c) 2013 Robert Krause (ruport@f00l.de)
+ *
+ * This file is part of Netmate.
+ *
+ * Netmate is free software: you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation, either version 3 of the License, or any later version.
+ *
+ * Netmate is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Netmate. If not, see http://www.gnu.org/licenses/.
+ *
+ ******************************************************************************/
+
+/******************************************************************************/
 /* netmate layer4 protocols */
-/**************************************************************************************************/
+/******************************************************************************/
 
 char *tcp_optkind(unsigned char id);
 GtkGrid *tcp_grid(struct tcphdr *tcp, u_char *options);
 GtkGrid *udp_grid(struct udphdr *udp);
 
-/**************************************************************************************************/
+/******************************************************************************/
 
 char *tcp_optkind(unsigned char id) {
   switch (id) {
