@@ -1,4 +1,4 @@
-.TH NETMATE 1 "10 NOV 2013"
+.TH NETMATE 1 "17 NOV 2013"
 
 .SH "NAME"
 netmate \- displays network protocol headers in uniform RFC like format
@@ -31,6 +31,13 @@ For further information visit the netmate homepage at http://f00l.de/netmate/.
 
 .SH "HISTORY"
 .TP 5
+0.2.0 - 17.11.2013
+* added full support for neighbor discovery protocol (NDP)
+.br
+* fixed GPLv3 license statement and added to all files
+.br
+* minor bug fixes
+.TP
 0.1.9 - 10.11.2013
 * added resolution of header fields for all supported protocols
 .br
@@ -67,7 +74,10 @@ For further information visit the netmate homepage at http://f00l.de/netmate/.
 * minor fixes
 
 .SH "COPYRIGHT"
-Netmate is released under the GNU General Public License.
+Copyright (c) 2013 Robert Krause
 
+Netmate is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
+
+Netmate is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 .SH "AUTHOR"
 Written by Robert Krause <ruport@f00l.de>.
