@@ -1,3 +1,22 @@
+/*******************************************************************************
+ *
+ * Copyright (c) 2013 Robert Krause (ruport@f00l.de)
+ *
+ * This file is part of Netmate.
+ *
+ * Netmate is free software: you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation, either version 3 of the License, or any later version.
+ *
+ * Netmate is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Netmate. If not, see http://www.gnu.org/licenses/.
+ *
+ ******************************************************************************/
+
 #define ETH_ALEN	6		/* Octets in one ethernet addr	 */
 
 #define	ETHERTYPE_IP		0x0800		/* IP */
