@@ -1,3 +1,9 @@
+2013-11-17 Robert Krause <Ruport@web.de>
+
+ * added full support for neighbor discovery protocol (NDP)
+ * fixed GPLv3 license statement and added to all files
+ * minor bug fixes
+
 2013-11-10 Robert Krause <Ruport@web.de>
 
  * added resolution of header fields for all supported protocols
